Fixed some bugs

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -427,6 +427,11 @@ div.tree-view-container {
         }
 
     }
+
+    div.rat-tree-dialogInput {
+        position: absolute;
+        z-index: 2;
+    }
 }
 
 @keyframes dialog-intro {
